# Deer

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .gitignore  .gitmodules  .prettierrc  .travis.yml  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  bootstrap.py  db.js  deploy.js  electron-builder.yml  genDocs.js  gulpfile.js  index.html  jest.config.js  main.js  make.py  package-lock.json  package.json  post-commit.sh  schema.sql  webpack.config.js
__mocks__/: api.electron.js  electron-log.js  electron.js  pouchdb-browser.js
__tests__/: App-test.jsx  setup.js
__tests__/actions/: header.test.js  modal.test.js  note.test.js  settings.test.js  welcome.test.js
__tests__/actions/__snapshots__/: header.test.js.snap  modal.test.js.snap  note.test.js.snap  welcome.test.js.snap
__tests__/components/: app.test.js  homeContent.test.js
__tests__/components/__snapshots__/: app.test.js.snap  homeContent.test.jsx.snap
__tests__/reducers/: header.test.js  modal.test.js  note.test.js  settings.test.js  welcome.test.js
__tests__/reducers/__snapshots__/: header.test.js.snap  modal.test.js.snap  note.test.js.snap  welcome.test.js.snap
app/: App.jsx  db.js  entry.js  entry.jsx  index.html  routes.js  store.js
app/actions/: actions.js  header.js  index.jsx  modal.js  note.js  note.test.js  noteEditor.js  noteList.js  settings.js  settings.test.js  types.jsx  welcome.js
app/actions/__snapshots__/: note.test.js.snap  (+1 more)
app/assets/: theme.js
app/components/: App.js  Header.js  Header.jsx  Home.js  Home.jsx  HomeContent.js  HomeContent.jsx  Modal.js  NoteEditor.js  NoteEditor.jsx  NoteEditorToolbar.js  NoteItem.js  NoteList.js  NoteList.jsx  SaveModal.js  Settings.js  Spinner.jsx  StatusModal.js  StatusModal.jsx  Welcome.js  Welcome.jsx  YesNoModal.js
app/constants/: actions.js  i18n.js  noteStatus.js  settingsStatus.js  welcome.js  welcome.json
app/containers/: Header.js  HomeContent.js  NoteEditor.js  NoteList.js  SaveModal.js  Settings.js  StatusModal.js  Welcome.js  YesNoModal.js
app/db/: index.js  index.jsx
app/i18n/: index.js
app/middlewares/: Notes.jsx  index.js  wait-service.js  waitService.js
app/reducers/: NoteReducer.jsx  header.js  index.js  index.jsx  modal.js  note.js  note.test.js  noteEditor.js  noteList.js  reducer.js  settings.js  settings.test.js  welcome.js
app/store/: index.jsx
app/utils/: api.electron.js  db.js  db2.js  routes.js  store.js
assets/: theme.js
assets/fonts/: El Messiri License.txt
assets/icons/: SVG.js
assets/images/: icon.icns
assets/styles/: about.css  index.css  typography.css
docs/: Building-and-Installing.md  CONTRIBUTING.md  Design.md  Electron-architecture.md  GitHub-workflow.md  List-of-dependencies.md  Packaging.md  README.md  Redux-architecture.md  api.md  index.md
main-process/: main.js
public/: index.html
resources/ui/: main-window.ui
src/: CMakeLists.txt  deer.cpp  deer.h  gui.cpp  gui.h  main.cpp
test/: CMakeLists.txt
utils/: api.electron.js  i18n.js  logger.js
views/: main-window.html
(+183 files in other folders)
